map pins > fix overlap / zIndex (weather & logo)

--- a/_custom/css/style.css
+++ b/_custom/css/style.css
@@ -1583,7 +1583,7 @@ a {
 	padding: 8px 10px;
 	background: rgba(255, 255, 255, .1);
   border: 1px solid rgba(255, 255, 255, .05);
-	z-index: 10;
+	z-index: 8;
 }
 
 body.nobranding #ftoverview #ftMapContainer #ftWeatherContainer {
@@ -1630,7 +1630,7 @@ body.nobranding #ftoverview #ftMapContainer #ftWeatherContainer {
   border: 1px solid rgba(255, 255, 255, .05);
   height: 57px;
   width: 146px;
-  z-index: 10;
+  z-index: 8;
 }
 
 #fthypervideo .ftNavCooperation {
